Added better exception message for inaccessible fields